# Simone-MCP

./: .env.example  .gitignore  A2A-CARD.md  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  agent.json  docker-compose.yml  mcp-config.json  package.json  pyproject.toml  requirements.lock.txt  tsconfig.json
.well-known/: agent-card.json  agent.json  oauth-client.json
clients/: codex-config.toml  opencode-mcp.json
docs/: architecture.md
landing-worker/: wrangler.jsonc
landing-worker/src/: index.js
src/: a2a-http.ts  cli.py  cli.ts  hf_sync.ts  idle-monetization.ts  main.py  mcp-server.ts  mcp_server.py  metadata.ts  runtime.ts  self-healing.ts  supabase.ts
src/simone_mcp/: __init__.py  cli.py  core.py  http_app.py  mcp_stdio.py
tests/: test_simone_mcp.py
